logs/offboard_pkg/build.make.306.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main1.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main1.cpp:29:35: error: ‘class MultiBody’ has no member named ‘Flightline’; did you mean ‘FlightLine’?
   29 |                         if(!multi.Flightline())
      |                                   ^~~~~~~~~~
      |                                   FlightLine
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main1.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
